fixed broken links

--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@ title: About
         <h3>Here's where you meet the people who made this.</h3>
       </div>
       <div class="image jekyll-story">
-        <img src="/images/banner2.jpg" alt="" />
+        <img src="{{ site.baseurl }}/images/banner2.jpg" alt="" />
     </div>
     </section>
 
@@ -26,6 +26,6 @@ title: About
         </ul>
       </div>
       <div class="image">
-        <img src="/images/{{ site.admin_image }}" alt="" />
+        <img src="{{ site.baseurl }}/images/{{ site.admin_image }}" alt="" />
       </div>
     </section>
